fix: Stop iframe from overflowing on Chrome/Edge

--- a/components/scripts/ScriptDetails.module.scss
+++ b/components/scripts/ScriptDetails.module.scss
@@ -16,6 +16,7 @@
         max-width: 100%;
     }
     > iframe {
+        height: 100%;
         max-height: 100%;
         max-width: 100%;
     }
